--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ li {
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
                         <h2 class="display-4">I'm a Algorithmic Problem Solver</h2>
-                        <p>I like to solve Algorithmic prolem in verious online judge like Hackerrank,Codeforces, etc</p>
+                        <p>I like to solve Algorithmic problems in verious online judge like Hackerrank,Codeforces, etc</p>
                     </div>
                 </div>
             </div>
